# pomodoro-log

./: package-lock.json  package.json
docs/design/: spec.md
docs/moc/: moc.tsx
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/store/: timerStore.ts
src/utils/: notification.ts  sound.ts
