[package]
name = "pomodoro-log"
version = "1.0.0"
description = "Pomodoro Timer with System Tray and Log Persistence"
authors = ["AniP"]
edition = "2021"

[lib]
name = "pomodoro_log_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
log = "0.4"
